# flanes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: test.yml
benchmarks/: bench_snapshot.py  bench_throughput.py
docs/: data-model.md  guide.md  reliability.md
examples/: README.md  agent_workflow.py  cli_workflow.sh  multi_machine.md
fla/: __init__.py  agent_sdk.py  budgets.py  cas.py  cli.py  completions.py  embeddings.py  evaluators.py  gc.py  git_bridge.py  mcp_server.py  plugins.py  project.py  remote.py  repo.py  serializable.py  server.py  state.py  templates.py  workspace.py
fla/web/: app.js  index.html  style.css
flanes/: __init__.py  agent_sdk.py  budgets.py  cas.py  cli.py  completions.py  evaluators.py  gc.py  git_bridge.py  mcp_server.py  plugins.py  project.py  remote.py  repo.py  server.py  state.py  templates.py  workspace.py
flanes/web/: app.js  index.html  style.css
tests/: conftest.py  test_cas.py  test_cli.py  test_concurrent_agents.py  test_crash_consistency.py  test_edge_cases.py  test_git_bridge.py  test_integration.py  test_limit_fixes.py  test_limits_edge_cases.py  test_phase1_fixes.py  test_phase2.py  test_phase5.py  test_phase6.py  test_phase7.py  test_remote_sync.py  test_repository.py  test_state_manager.py  test_stress.py  test_workspace_manager.py
vex/: __init__.py  agent_sdk.py  budgets.py  cas.py  cli.py  completions.py  embeddings.py  evaluators.py  gc.py  git_bridge.py  mcp_server.py  plugins.py  project.py  remote.py  repo.py  server.py  state.py  templates.py  workspace.py
vex/web/: app.js  index.html
vscode-extension/: package.json
vscode-extension/src/: cli.ts  extension.ts  history.ts  statusbar.ts
