[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vex"
version = "0.3.0"
description = "Version control for agentic AI systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
]

[project.scripts]
vex = "vex.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.10"]
s3 = ["boto3>=1.26"]
gcs = ["google-cloud-storage>=2.0"]
remote = ["boto3>=1.26", "google-cloud-storage>=2.0"]

# Entry point groups for plugins — third-party packages register here
# See docs/guide.md "Writing Plugins" for details
[project.entry-points."vex.evaluators"]
# example: my_evaluator = "my_package:evaluate_func"
[project.entry-points."vex.storage"]
# example: my_backend = "my_package:create_backend"
[project.entry-points."vex.hooks"]
# example: my_hook = "my_package:hook_handler"

[tool.setuptools.packages.find]
include = ["vex*"]

[tool.setuptools.package-data]
"vex" = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "stress: marks tests as stress tests (may take longer)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
