[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flanes"
version = "0.3.0"
description = "Fla: Feature Lanes for Agents - version control for agentic AI systems"
authors = [{name = "Kim Ranzani (Glimish)"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
]

[project.urls]
Homepage = "https://github.com/glimish/flanes"
Repository = "https://github.com/glimish/flanes"
Issues = "https://github.com/glimish/flanes/issues"
Documentation = "https://github.com/glimish/flanes/tree/main/docs"

[project.scripts]
fla = "fla.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.10"]
s3 = ["boto3>=1.26"]
gcs = ["google-cloud-storage>=2.0"]
remote = ["boto3>=1.26", "google-cloud-storage>=2.0"]

# Entry point groups for plugins - third-party packages register here
# See docs/guide.md "Writing Plugins" for details
[project.entry-points."fla.evaluators"]
# example: my_evaluator = "my_package:evaluate_func"
[project.entry-points."fla.storage"]
# example: my_backend = "my_package:create_backend"
[project.entry-points."fla.hooks"]
# example: my_hook = "my_package:hook_handler"

[tool.setuptools.packages.find]
include = ["fla*"]

[tool.setuptools.package-data]
"fla" = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "stress: marks tests as stress tests (may take longer)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"fla/completions.py" = ["E501"]  # Shell script strings have long lines

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
